# kung_fu_chess

./: .gitattributes  .gitignore  README.md  client_main.py  graphics_main.py  main.py  pyproject.toml  server_main.py
.github/workflows/: ci.yml
assets/: board.csv
docs/: architecture.md
src/kfchess/: algebraic.py  config.py  logging_setup.py  main.py  observers.py  protocol.py  render_model.py  snapshot.py  tokens.py
src/kfchess/app/: bootstrap.py  command_loop.py
src/kfchess/bus/: event_bus.py  events.py  publisher.py  topics.py
src/kfchess/client/: app.py  bootstrap.py  controller.py  home_screen.py  net_client.py  snapshot_view.py
src/kfchess/control/: controller.py
src/kfchess/engine/: arbiter.py  clock.py  events.py  game_engine.py
src/kfchess/graphics/: __init__.py  animation.py  app.py  assets.py  banner.py  bootstrap.py  events.py  geometry.py  hud.py  img.py  input.py  piece_view.py  renderer.py  sound.py
src/kfchess/model/: board.py  color.py  piece.py  piece_type.py  position.py
src/kfchess/movement/: primitives.py  rules.py
src/kfchess/rules/: promotion.py  rule_engine.py
src/kfchess/server/: command_parser.py  game_server.py  lobby.py  matchmaker.py  rating.py  room_manager.py  session.py  user_store.py
src/kfchess/text_io/: board_parser.py  board_printer.py
tests/integration/: runner.py  test_fixtures.py
tests/integration/fixtures/: airborne_capture_only_enemy.in  airborne_capture_only_enemy.out  airborne_piece_captures_arriving_enemy.in  airborne_piece_captures_arriving_enemy.out  basic_print.in  basic_print.out  bishop_blocked_by_own_piece.in  bishop_blocked_by_own_piece.out  black_pawn_double_from_start_valid.in  black_pawn_double_from_start_valid.out  black_pawn_promotes_to_queen.in  black_pawn_promotes_to_queen.out  cannot_jump_while_moving.in  cannot_jump_while_moving.out  cannot_start_move_through_friendly_piece.in  cannot_start_move_through_friendly_piece.out  cooldown_blocks_immediate_move.in  cooldown_blocks_immediate_move.out  enemy_arrives_after_landing_captures_normally.in  enemy_arrives_after_landing_captures_normally.out  enemy_collision_black_started_first.in  missing_board.in  (+39 more)
tests/unit/: test_algebraic.py  test_arbiter.py  test_arbiter_internals.py  test_assets.py  test_banner.py  test_board.py  test_board_parser.py  test_board_printer.py  test_bootstrap.py  test_bus_integration.py  test_bus_publisher.py  test_cell_mapping.py  test_client_app.py  test_client_bootstrap.py  test_client_controller.py  test_clock.py  test_color.py  test_command_loop.py  test_command_parser.py  test_controller.py  test_e2e_client_server.py  test_event_bus.py  test_game_engine.py  test_game_over.py  test_game_server.py  test_geometry.py  test_graphics_animation.py  test_graphics_app.py  test_graphics_bootstrap.py  test_graphics_events.py  test_graphics_input.py  test_graphics_observers.py  test_home_screen.py  test_hud.py  test_img.py  test_legal_moves.py  test_lobby.py  test_logging_setup.py  test_main.py  test_matchmaker.py  (+18 more)
(+1 files in other folders)
